fixed the alignment of the tutorial video links

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2718,7 +2718,7 @@ and it won't be important on password protected instances */
     color: #999;
 }
 #upYourSkillz {
-    margin: 0 68px;
+    margin: 0 67px;
 }
 #moreResources {
     padding: 16px 0 0 0;
